# gale-manifest

./: .gitignore  README.md  hatch.toml  pyproject.toml  pyrightconfig.json  requirements.txt  ruff.toml  west.yml
res/: gale-manifest.drawio
scripts/: projects.py  util.py  west-commands.yml  west_commands.py
src/gale/: boards.py  build.py  build_cache.py  common.py  configuration.py  log.py  main.py  project_cache.py  projects.py  targets.py  tasks.py  typer_args.py  util.py
src/gale/data/: boards.py  paths.py  projects.py  structs.py  targets.py
